Lighthouse accessiblity contrast fix in nav-bar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,9 +158,6 @@ i{
   visibility: visible;
   width: 100%;
 }
-.navbar a:hover, .navbar .active, .navbar .active:focus, .navbar li:hover > a {
-  color: #CCC;
-}
 .navbar .dropdown ul {
   display: block;
   position: absolute;
